# OSVR-Senior-Project

./: .gitignore  .travis.yml  Doxyfile  LICENSE  README.md  UIREADME.md  _arc_check_8cs.html  _button_script_8cs.html  _change_color_8cs.html  _check_8cs.html  _circle_gesture_8cs.html  _disappear_at_distance_8cs.html  _drop_down_control_8cs.html  _fitted_normalizer_8cs.html  _g_transform_8cs.html  _g_transform_buffer_8cs.html  _gesture_8cs.html  _gesture_event_8cs.html  _gesture_meta_data_8cs.html  _gesture_monitor_8cs.html  _gesture_visualizer_window_8cs.html  _gesturing_2_assets_2_gestures_2_simple_hand_8cs.html  _heart_gesture_8cs.html  _i_controller_8cs.html  _line_check_8cs.html  _line_normalizer_8cs.html  _normalizer_8cs.html  _pointer_8cs.html  _r_e_a_d_m_e_8md.html  _radius_check_8cs.html  _rotate_to_user_8cs.html  _scale_to_user_8cs.html  _set_correct_camera_height_8cs.html  _square_gesture_8cs.html  _text_script_8cs.html  _touch_controller_8cs.html  _tracker_setup_8cs.html  _triangle_gesture_8cs.html  _u_i_2_assets_2_o_s_v_r___g_u_i_2_button_2_r_e_a_d_m_e_8md.html  _u_i_2_assets_2_o_s_v_r___g_u_i_2_drop_down_2_r_e_a_d_m_e_8md.html  (+141 more)
Gesturing/: Assembly-CSharp.csproj  gitignore
UI/UI-Charlie/Hands Need to Work/Assets/Oculus/VR/OVRAvatarSDK/Samples/: CMakeLists.txt  generate_projects.cmd
UI/UI-Charlie/Hands Need to Work/Assets/Oculus/VR/OVRAvatarSDK/Samples/MirrorAndroid/: AvatarManager.cpp  AvatarManager.h  OvrApp.h
api/: index.md
scripts/: deploy.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+74 more)
(+363 files in other folders)
